# unicode

./: .bunder.yml  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake-scripts/: FindUnicu.cmake
unicu/: CMakeLists.txt  CharProperty.cpp  CharProperty.h  CharPropertyBuilder.cpp  Portability.h  UTF8StringPiece.h  Unicode.cpp  Unicode.h  Utf8StringPiece.cpp  Utf8StringPiece.h  uconv.cpp  uconv.h  unicu-config.h.in
unicu/test/: CMakeLists.txt  CharPropertyTest.cpp  UnicodeTest.cpp
